<resources>
    <string name="app_name">Bird Breeding</string>
    <string name="tab_text_1">BIRDS</string>
    <string name="tab_text_2">BREEDING</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bird_details">Bird Details</string>
    <string name="bird_photo">Bird\'s Photo</string>
    <string name="race">Race</string>
    <string name="variation">Variation</string>
    <string name="ring">Ring</string>
    <string name="code">Code</string>
    <string name="birth_date">Birth date</string>
    <string name="descendants">Descendants</string>
    <string name="origin">Origin</string>
    <string name="annotations">Annotations</string>
    <string name="procedence">Procedence</string>
    <string name="title_activity_breed_details">BreedDetailsActivity</string>
    <string name="title_activity_puesta">PuestaActivity</string>
    <string name="layEggs">Puestas</string>
    <string name="start_date">Start date</string>
    <string name="jaula_number">Jaula Nº</string>
    <string name="eggs_success">Eggs/Success</string>
    <string name="abrv_female">F</string>
    <string name="female">Female</string>
    <string name="abrv_male">M</string>
    <string name="male">Male</string>
    <string name="format_eggs_success">%d/%d</string>
    <string name="cd_puesta_item_image">PuestaItemImage</string>
    <string name="bad_egg">Bad egg</string>
    <string name="puesta_date">Puesta date</string>
    <string name="anilla_date">Date anilla put</string>
    <string name="register_bird">Register Bird</string>
    <string name="have_died">Have died</string>
    <string name="more_info">More info</string>
    <string-array name="genres">
        <item>@string/female</item>
        <item>@string/male</item>
    </string-array>
</resources>
