<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/etJaulaNumber"
                android:text="@string/jaula_number" />

            <EditText
                android:id="@+id/etJaulaNumber"
                style="@style/TextViewValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="2" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvPuestaItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/list_item_puesta_item" />

        <LinearLayout
            android:id="@+id/llDataContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--llEggDataContainer-->
            <LinearLayout
                android:id="@+id/llEggDataContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/etPuestaDate"
                        android:text="@string/puesta_date" />

                    <EditText
                        android:id="@+id/etPuestaDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:inputType="date" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/cbBadEgg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/bad_egg" />
            </LinearLayout>

            <!--llBabyBirdDataContainer-->
            <LinearLayout
                android:id="@+id/llBabyBirdDataContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/etBirthDate"
                        android:text="@string/birth_date" />

                    <EditText
                        android:id="@+id/etBirthDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:inputType="date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/etAnillaDate"
                        android:text="@string/anilla_date" />

                    <EditText
                        android:id="@+id/etAnillaDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5"
                        android:inputType="date" />
                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/cbDied"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/have_died" />
            </LinearLayout>

            <Button
                android:id="@+id/btnRegisterBird"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_bird" />

            <LinearLayout
                android:id="@+id/llGrowBirdDataContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivBirdPhoto"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/colorPrimary"
                    android:contentDescription="@string/bird_photo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvGenre"
                        style="@style/TextViewValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:text="M" />

                    <TextView
                        style="@style/TextViewHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/ring" />

                    <TextView
                        android:id="@+id/tvAnilla"
                        style="@style/TextViewValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom" />

                    <Button
                        android:id="@+id/btnMoreInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_info" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddEgg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/rvPuestaItems"
        app:layout_anchorGravity="top|right|end"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</FrameLayout>